# litellm-mcp-oauth2

./: .gitignore  CLAUDE.md  CLEAN_CODE_REFACTORING.md  PROJECT_STRUCTURE.md  README.md  SOLUTION_SUMMARY.md  pyproject.toml  simple_mcp_auth.py  test_simple.py
litellm-mcp-auth-patch/: README.md  __init__.py  enhanced_mcp_server_manager.py  get_credential.py  litellm_mcp_auth_patch.py  litellm_with_mcp_auth.py  mcp_auth_config_schema.py  mcp_auth_token_manager.py  mcp_auth_utils.py  pyproject.toml
testing/: README.md  mock_servers.py  test_mcp_integration.py  test_real_mcp_server.py  test_success_criteria.py
