[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litellm-mcp-oauth2"
version = "0.1.0"
description = "OAuth2 authentication for LiteLLM MCP connections"
authors = [
    {name = "OAuth2 MCP Team", email = "team@example.com"},
]
dependencies = [
    "litellm>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]